         how the code works, and possible even stop John Gruber hating my 
         guts).
         
         If you were using Text::Markdown previously, but relying on an 
         implicit MultiMarkdown feature, this *could be a breaking change*.
       
         Detailed description of any possible user visible changes below:
         
         - Text::Markdown will no longer supports the additional attribute 
           specification for images and links feature, which was not in 
           original Markdown, but were previously supported after
           the code merge of Text::Markdown and Text::MultiMarkdown.

           If you are relying on this features, it is recommended that you 
           use Text::MultiMarkdown (configured as you prefer), as this is 
           not a supported feature in the original Markdown.

         - Text::MultiMarkdown has changed the order of attributes in image 
           tags, the id attribute is moved from the first to the last 
           attribute (barring user supplied attributes). An example of the 
           expected change is included below:

           Old output:  <img id="image" src="http://path.to/image" alt="image" title="Image title" width="40px" height="400px" />

           New output: <img src="http://path.to/image" alt="image" title="Image title" id="image" width="40px" height="400px" />
         
           This is due to the code re-organisation, moving the id attribute 
           around shouldn't affect anything that isn't relying on the 
           attribute ordering (which is meant to be unimportant in HTML), and 
           allows for simplification of the unified code.
           
1.0.8 2008-03-??T??:??:??
        -  Totally rewrite HTML block hashing to be *a lot* quicker. No longer
           uses Text::Balanced, which was the main performance sore point in
           the module. These performance improvements make us around 48% 
           faster on t/21fulldocs-markdown.t