@@ -143,8 +143,11 @@ This file documents the revision history for Perl extension Text::MultiMarkdown.
            attribute ordering (which is meant to be unimportant in HTML), and 
            allows for simplification of the unified code.
            
-1.0.8 2008-03-??T??:??:??
         -  Totally rewrite HTML block hashing to be *a lot* quicker. No longer
            uses Text::Balanced, which was the main performance sore point in
            the module. These performance improvements make us around 48% 
            faster on t/21fulldocs-markdown.t
+        - Clean up local stuff for settings.
+        - Do a little cleanup of intialisation (more needed)
+        - Remove copy pasted regexes from Text::MultiMarkdown by tieing 
+          relevant typeglobs, and removing the big regex from _StripLinkDefinitions
